@@ -3,10 +3,6 @@ package io.extact.rms.client.console.ui.member;
 import static io.extact.rms.client.console.ui.ClientConstants.*;
 import static io.extact.rms.client.console.ui.textio.TextIoUtils.*;
 
-import java.util.stream.Collectors;
-
-import lombok.RequiredArgsConstructor;
-
 import io.extact.rms.client.api.RentalReservationClientApi;
 import io.extact.rms.client.api.dto.ReservationClientDto;
 import io.extact.rms.client.api.dto.UserAccountClientDto;
@@ -15,6 +11,7 @@ import io.extact.rms.client.console.ui.ClientConstants;
 import io.extact.rms.client.console.ui.TransitionMap.RmsScreen;
 import io.extact.rms.client.console.ui.TransitionMap.Transition;
 import io.extact.rms.client.console.ui.textio.TextIoUtils;
+import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
 public class CancelReservationScreen implements RmsScreen {
@@ -49,7 +46,7 @@ public class CancelReservationScreen implements RmsScreen {
                 .withSelectableValues(
                         ownReservations.stream()
                             .map(ReservationClientDto::getId)
-                            .collect(Collectors.toList()),
+                            .toList(),
                         SCREEN_BREAK_VALUE)
                 .read("予約番号");
         if (TextIoUtils.isBreak(selectedReservation)) {
